fix: contraseña de 6 digitos
